HW week 4 is added. Have some visibility issues

--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -1,8 +1,3 @@
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
 
 body {
     font-family: sans-serif;
@@ -16,6 +11,11 @@ body {
     padding: 20px ;
 }
 
+.container {
+  padding: 20px ;
+  align-items: center;
+}
+
 header{
     background-color:#a9c5c7;
     padding: 20px;
@@ -24,10 +24,15 @@ header{
 
 .center{
     text-align: center;
+    justify-content: space-around;
     padding-left: 7%;
     padding-right: 7%;
     color: black;
   }
+  .upper-center{
+    margin-top: 50px;
+    text-align: center;
+}
 
   @media (max-width:816px){
     .col-4{
@@ -36,15 +41,39 @@ header{
     p{
         padding-top:5%;
     }
-}
+} 
 
 
 .visible{
-  color: black;
   visibility: visible;
 }
 
 .hidden{
   visibility: hidden;
 
+}
+
+.button {
+  border: rgba(248, 245, 247, 0.808) solid 1px;
+  border-radius: 10px;
+  margin: 10px;
+  align-content: center;
+  color: black;
+
+}
+.btn-info:hover {
+  background-color:#a9c5c7;
+  border: #203a3c solid 1px;
+  margin-bottom: 10px;
+}
+
+.btn-info{
+  background-color: #a9c5c7;
+  margin-bottom: 10px;
+  color: black;
+}
+
+.btn-info:hover {
+  background-color:#a9c5c7;
+  border: #203a3c solid 1px;
 }
